grammar.js
    nu_script: $ => seq(optional($.shebang), optional($._block_body)),

    _block_body: $ =>
      general_body_rules(
        '',
        $._block_body_statement,
        $._terminator,
        null,
        null,
        $._terminator,
      ),

    /// Identifiers
    // NOTE:
    // probably needs an external scanner for cmd_identifier
    // to behave exactly the same as the nushell parser
    cmd_identifier: $ => {
      const excluded = '\\[\\]\\{}<>="`\':,';
      const pattern_repeat = repeat(none_of(excluded));
      const pattern_suffix = token.immediate(repeat1(none_of(excluded)));
      return choice(
        token(
          prec(
            prec_map().low,
            seq(none_of(excluded + '^@#$\\-'), pattern_repeat),
          ),
        ),
        ...Object.values(keyword()).map((x) =>
          seq(alias(x, '_prefix'), pattern_suffix),
        ),
        ...Object.values(modifier()).map((x) =>
          seq(alias(x, '_prefix'), pattern_suffix),
        ),
        ...Object.values(special()).map((x) =>
          seq(alias(x, '_prefix'), pattern_suffix),
        ),
        ...row_condition_command_names().map((x) =>
          seq(alias(x, '_prefix'), pattern_suffix),
        ),
        seq(
          $._val_number_decimal,
          optional(
            choice(
              alias($.duration_unit, '_unit'),
              alias($.filesize_unit, '_unit'),
            ),
          ),
          // conflict with expr_binary
          optional(choice(...table().map((x) => token.immediate(x[1])))),
          token.immediate(prec(prec_map().low, pattern_repeat)),
        ),
      );
    },
    identifier: _ => _identifier_rules(false),

    long_flag_identifier: _ =>
      token.immediate(/[0-9\p{XID_Start}_][\p{XID_Continue}?._-]*/u),

    _command_name: $ =>
      choice(
        field('unquoted_name', $.cmd_identifier),
        field('quoted_name', $.val_string),
      ),

    _variable_name: $ =>
      choice(
        field('var_name', $.identifier),
        field('dollar_name', $.val_variable),
      ),

    // remove newline characters from extras to reduce ambiguity
    // manually controlled by adding the following to parenthesized rules
    _newline: _ => /\r?\n/,
    _repeat_newline: $ => repeat1($._newline),
    _space: _ => /[ \t]+/,
    _separator: $ => choice($._space, $._newline),
    _pipe_separator: $ =>
      repeat1(seq(optional($._repeat_newline), choice('|', ...redir_pipe()))),

    /// Attributes
    attribute_list: $ => repeat1(seq($.attribute, choice(';', $._newline))),
    attribute_identifier: _ =>
      token.immediate(/[0-9\p{XID_Start}][0-9\p{XID_Continue}_-]*/u),
    attribute: $ =>
      seq(
        '@',
        field('type', $.attribute_identifier),
        repeat(seq($._space, optional($._cmd_arg))),
      ),

    /// Top Level Items
    decl_def: $ =>
      seq(
        optional($.attribute_list),
        optional(modifier().visibility),
        keyword().def,
        repeat($.long_flag),
        $._command_name,
        repeat($.long_flag),
        field('parameters', choice($.parameter_parens, $.parameter_bracks)),
        field('return_type', optional($.returns)),
        field('body', $.block),
      ),

    returns: $ => seq(optional(':'), choice($._multiple_types, $._one_type)),

    _one_type: $ => seq($._type_annotation, '->', $._type_annotation),

    _multiple_types: $ =>
      seq(brack().open_brack, optional($._types_body), brack().close_brack),

    /// Parameters

    parameter_bracks: $ =>
      seq(
        brack().open_brack,
        optional($._repeat_newline),
        repeat($.parameter),
        brack().close_brack,
      ),

    parameter_pipes: $ =>
      seq('|', optional($._repeat_newline), repeat($.parameter), '|'),

    parameter: $ =>
      seq(
        choice(
          $._param_name,
          seq(
            field('param_long_flag', $.param_long_flag),
            field('flag_capsule', optional($.flag_capsule)),
          ),
        ),
        repeat(choice($.param_type, $.param_value)),
        repeat(choice($._newline, ',')),
      ),

    _param_name: $ =>
      choice(
        field('param_rest', $.param_rest),
        field('param_optional', $.param_opt),
        field('param_name', seq(optional('$'), $.identifier)),
        field('param_short_flag', $.param_short_flag),
      ),

    flat_type: _ => field('flat_type', flat_types()),

    param_long_flag: $ => seq(operator().long_flag, $.long_flag_identifier),

    flag_capsule: $ =>
      seq(brack().open_paren, $.param_short_flag, brack().close_paren),

    param_short_flag: $ =>
      seq(operator().minus, field('name', $.param_short_flag_identifier)),

    param_short_flag_identifier: _ =>
      token.immediate(/[\p{Punctuation}\p{Symbol}\p{XID_Continue}]/u),

    /// Controls

    // control statements cannot be used in pipeline because they
    // do not return values
    _ctrl_statement: $ => choice($.ctrl_for, $.ctrl_loop, $.ctrl_while),

    // control expressions *return values and can be used in pipelines
    //
    // * `break` and `continue` do not return values (yet?) but can be
    // used in pipelines
    _ctrl_expression: $ => choice($.ctrl_if, $.ctrl_try, $.ctrl_match),

    _ctrl_match_body: $ =>
      general_body_rules(
        '',
        choice($.match_arm, $.default_arm),
        $._entry_separator,
        $._newline,
      ),

    ctrl_match: $ =>
      seq(
        keyword().match,
        field(
          'scrutinee',
          choice($._item_expression, alias($.unquoted, $.val_string)),
        ),
        brack().open_brace,
        optional($._ctrl_match_body),
        brack().close_brace,
      ),

    match_arm: $ =>
      seq(
        field('pattern', $.match_pattern),
        '=>',
        field('expression', $._match_expression),
      ),

    default_arm: $ =>
      seq(
        field('default_pattern', '_'),
        '=>',
        field('expression', $._match_expression),
      ),

    _match_expression: $ =>
      choice($._item_expression, prec.dynamic(10, $.block)),

    match_pattern: $ =>
      choice(
        seq('_', $.match_guard),
        seq($._match_pattern, optional($.match_guard)),
        seq(
          $._match_pattern,
          repeat(seq(optional($._newline), '|', $._match_pattern)),
        ),
      ),

    _match_pattern: $ =>
      choice($._match_pattern_expression, alias($.unquoted, $.val_string)),

    match_guard: $ => seq(keyword().if, $._expression),

    _stmt_let_shortcut: $ => prec.left(
      seq(
        keyword().let,
        field('name', $._variable_name),
        field('type', optional($.param_type)),
      ),
    ),

    /// Pipelines

    pipe_element: $ =>
      choice(
        seq(
          _env_variable_rule(false, $),
          $._expression,
          optional($.redirection),
        ),
        seq(_env_variable_rule(false, $), $.command),
        $._ctrl_expression,
        $.row_condition_command,
        $.assignment,
        alias($._stmt_let_shortcut, $.stmt_let),
      ),

    block: $ =>
      seq(brack().open_brace, optional($._block_body), brack().close_brace),

    _blosure: $ => choice($.block, $.val_closure),

    _expression: $ =>
      choice(
        $._value,
        $.expr_binary,
        $.expr_unary,
        $.val_range,
        $.expr_parenthesized,
      ),

    _expression_parenthesized: $ =>
      choice(
        $._value,
        $.expr_unary,
        $.val_range,
        $.expr_parenthesized,
        alias($.expr_binary_parenthesized, $.expr_binary),
      ),

    /// Composite Expressions

    _expr_binary_expression: $ =>
      choice(
        $._value,
        $.val_range,
        $.expr_binary,
        $.expr_unary,
        $.expr_parenthesized,
      ),

    _expr_binary_expression_parenthesized: $ =>
      choice(
        $._value,
        $.val_range,
        alias($.expr_binary_parenthesized, $.expr_binary),
        $.expr_unary,
        $.expr_parenthesized,
      ),

    expr_parenthesized: $ =>
      seq(
        brack().open_paren,
        optional($._parenthesized_body),
        brack().close_paren,
        optional($.cell_path),
      ),

    _expr_parenthesized_immediate: $ =>
      seq(
        token.immediate(brack().open_paren),
        optional($._parenthesized_body),
        brack().close_paren,
      ),

    _parenthesized_body: $ =>
      general_body_rules(
        '',
        $._block_body_statement_parenthesized,
        $._terminator,
        null,
        [
          repeat1(seq(optional($._repeat_newline), ';')),
          optional($._repeat_newline),
        ],
        $._terminator,
      ),

    val_range: _range_rule(false),
    _val_range: _range_rule(true),

    _immediate_decimal: _decimal_rule(true),

    /// Simple Expressions

    val_nothing: _ =>
      choice(
        special().null,
        seq(token(brack().open_paren), token.immediate(brack().close_paren)),
      ),

    val_bool: _ => choice(special().true, special().false),

    val_variable: $ =>
      seq(
        '$',
        field('name', choice('nu', 'in', 'env', $.identifier)),
        optional($.cell_path),
      ),

    val_number: $ => $._val_number,

    _val_number_decimal: _decimal_rule(false),

    // separating floats from integers does not end well
    // especially when it comes to incorporation with ranges.
    _val_number: $ =>
      choice(
        $._val_number_decimal,
        /0x[0-9a-fA-F_]+/,
        /0b[01_]+/,
        /0o[0-7_]+/,
        special().pos_infinity,
        special().neg_infinity,
        special().not_a_number,
      ),

    _stringish: $ =>
      choice(
        $.val_string,
        $.val_interpolated,
        $.expr_parenthesized,
        $.val_variable,
      ),

    val_string: $ =>
      choice(
        $._str_double_quotes,
        $._str_single_quotes,
        $._str_back_ticks,
        $._raw_str,
      ),

    _raw_str: $ =>
      seq(
        $.raw_string_begin,
        alias($.raw_string_content, $.string_content),
        $.raw_string_end,
      ),

    string_content: $ =>
      repeat1(
        choice(
          $._escaped_str_content,
          // double quoted strings accept escapes
          $.escape_sequence,
        ),
      ),

    _str_double_quotes: $ => seq('"', optional($.string_content), '"'),

    _escaped_str_content: _ =>
      token.immediate(prec(prec_map().string, /[^"\\]+/)),

    _str_single_quotes: $ =>
      seq(
        '\'',
        alias(
          token.immediate(prec(prec_map().string, /[^']*/)),
          $.string_content,
        ),
        token.immediate('\''),
      ),

    _str_back_ticks: $ =>
      seq(
        '`',
        alias(
          token.immediate(prec(prec_map().string, /[^`]*/)),
          $.string_content,
        ),
        token.immediate('`'),
      ),

    val_interpolated: $ =>
      choice($._inter_single_quotes, $._inter_double_quotes),

    _inter_single_quotes: $ =>
      seq(
        '$\'',
        repeat(
          choice(
            field('expr', $.expr_interpolated),
            $.unescaped_interpolated_content,
          ),
        ),
        token.immediate('\''),
      ),

    _inter_double_quotes: $ =>
      seq(
        '$"',
        repeat(
          choice(
            field('expr', $.expr_interpolated),
            $.inter_escape_sequence,
            // double quoted strings accept escapes
            $.escaped_interpolated_content,
          ),
        ),
        token.immediate('"'),
      ),

    expr_interpolated: $ =>
      seq(brack().open_paren, $._parenthesized_body, brack().close_paren),

    /// Collections

    val_list: $ =>
      seq(
        brack().open_brack,
        optional($.list_body),
        brack().close_brack,
        optional($.cell_path),
      ),

    _spread_listish: $ =>
      choice(
        alias($._spread_list, $.val_list),
        alias($._spread_variable, $.val_variable),
        alias($._spread_parenthesized, $.expr_parenthesized),
      ),

    list_body: $ =>
      general_body_rules(
        'entry',
        $.val_entry,
        $._entry_separator,
        $._newline,
        null,
        choice($._newline, ','),
      ),

    val_entry: $ =>
      prec(
        10,
        field(
          'item',
          choice(
            $._item_expression,
            field('spread', $._spread_listish),
            alias($._unquoted_in_list, $.val_string),
            alias($._unquoted_in_list_with_expr, $.val_string),
          ),
        ),
      ),

    _item_expression: $ =>
      choice($._value, $.val_range, $.expr_parenthesized),

    val_record: $ =>
      seq(
        brack().open_brace,
        optional($.record_body),
        brack().close_brace,
        optional($.cell_path),
      ),

    _spread_recordish: $ =>
      choice(
        alias($._spread_record, $.val_record),
        alias($._spread_variable, $.val_variable),
        alias($._spread_parenthesized, $.expr_parenthesized),
      ),

    record_body: $ =>
      general_body_rules(
        'entry',
        $.record_entry,
        $._entry_separator,
        $._newline,
      ),

    _entry_separator: _ => token(prec(prec_map().higher, choice(',', /\s/))),

    record_entry: $ =>
      choice(
        field('spread', $._spread_recordish),
        seq(
          field(
            'key',
            choice(
              // Without $.cmd_identifier, cannot correctly distinguish between record and closure
              seq(alias($.cmd_identifier, $.identifier), repeat($._separator)),
              alias($._record_key, $.identifier),
              $.val_string,
              $.val_interpolated,
              $.val_number,
              $.val_variable,
              $.expr_parenthesized,

              // This distinguish between record keys and keywords
              ...Object.values(keyword()).map((x) => alias(x, $.identifier)),
              ...Object.values(modifier()).map((x) => alias(x, $.identifier)),
            ),
          ),
          token(prec(prec_map().higher, ':')),
          field(
            'value',
            choice(
              $._item_expression,
              alias($._unquoted_in_record, $.val_string),
              alias($._unquoted_in_record_with_expr, $.val_string),
            ),
          ),
        ),
      ),

    _record_key: _ => {
      const excluded = '\\[\\]{}"`\':,';
      const pattern_repeat = repeat(none_of(excluded));
      // This distinguish number and identifier starting with -/+
      return seq(
        choice(token(operator().minus), token(operator().plus)),
        token.immediate(pattern_repeat),
      );
    },

    val_closure: $ =>
      seq(
        brack().open_brace,
        optional($._repeat_newline),
        optional(field('parameters', $.parameter_pipes)),
        optional($._block_body),
        brack().close_brace,
      ),

    /// CellPaths

    cell_path: $ => repeat1($.path),

    _path_suffix: _$ => choice('?', '!', seq('?', '!'), seq('!', '?')),

    path: $ => {
      const path = choice(
        token.immediate(prec(prec_map().low, repeat(none_of('\\[\\]{}.,:?!')))),
        $.val_string,
      );

      return seq('.', path, optional($._path_suffix));
    },

    /// Single-use env variables: FOO=BAR cmd

    _cmd_arg: $ =>
      choice(
        field('redir', prec.right(10, $.redirection)),
        field('flag', prec.right(9, $._flag)),
        field('arg', prec.right(8, $._value)),
        field('arg', prec.right(8, $.val_range)),
        field('arg', prec.right(7, $.expr_parenthesized)),
        field('arg_spread', $._spread_listish),
        // lowest precedence to make it a last resort
        field('arg_str', alias($.unquoted, $.val_string)),
        field('arg_str', alias($._unquoted_with_expr, $.val_string)),
      ),

    _flag_equals_value: $ =>
      seq(token.immediate('='), field('value', $._flag_value)),

    short_flag_identifier: _ =>
      token.immediate(/[\p{XID_Continue}:?@!%_-]+/u),
